# Reco

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SCHEMA.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
audit/: 2026-06-10.md  2026-07-04__lint__un-bon-moment.md  2026-07-20__liens__un-bon-moment.json  2026-07-20__liens__un-bon-moment.md
docker/: build-static.sh  entrypoint.sh  review_launcher.py  run-review.sh
docs/: architecture.md  epic-review-fixall-report-2026-07-19.md  epic-ui-review-report-2026-07-06.md  fork-guide.md  index.md  llm-local.md  manifeste-ethique.md  phase-1-report-2026-06-10.md  phase-2-report-2026-06-11.md  phase-3-report-2026-06-12.md  phase-4-report-2026-06-12.md  recommendedby-attribution-2026-07-21.md  roadmap-2026.md  screencast-script.md  session-2026-05-28.md  vision-2026.md  yagni.md
public/: robots.txt
scripts/: seal_cross_stack_fixtures.py
src/: content.config.ts
tests/: README.md  _embed_fakes.py  _html_helpers.py  conftest.py  test_aggregate_clicks.py  test_aggregate_clicks_new.py  test_apply_links.py  test_atomic_and_cache.py  test_audit_yt_acast_cli.py  test_backfill_extraction_history.py  test_common.py  test_config_astro_adapter.py  test_config_cross_stack.py  test_config_integration.py  test_config_loader.py  test_config_policies.py  (+73 more)
(+9189 files in other folders)
